// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PipelineErrorDialog /> should render with minimal props 1`] = `
<PipelineErrorDialog
  actions={[]}
  message=""
  params={
    {
      "code": "123",
      "message": "Error message",
      "pipeline": "fakePipeline",
      "request": {},
    }
  }
>
  <BasicDialog
    actions={[]}
    title="modal.title_error"
  >
    <FocusTrap>
      <div
        aria-labelledby="basicDialogTitle basicDialogDesc"
        aria-modal={true}
        className="sg-1pcx6xq-container ui-material__base-dialog"
        data-test-id="basicDialog"
        role="alertdialog"
      >
        <div
          className="sg-1t4okzq-content"
        >
          <Title
            title="modal.title_error"
          >
            <ForwardRef(Typography)
              aria-level="2"
              className="sg-bawed5-title"
              component="div"
              id="basicDialogTitle"
              role="heading"
              variant="h3"
            >
              <div
                aria-level="2"
                className="engage__typography engage__typography_h3 sg-a3ut8q-Typography-root-Typography-h3-title"
                id="basicDialogTitle"
                role="heading"
              >
                <Ellipsis
                  className=""
                  rows={3}
                >
                  <Dotdotdot
                    clamp={3}
                    className=" common__ellipsis"
                    tagName="div"
                    truncationChar="…"
                    useNativeClamp={true}
                  >
                    <div
                      className=" common__ellipsis"
                    >
                      <Translate
                        acceptPlainTextWithPlaceholders={false}
                        className={null}
                        params={{}}
                        role={null}
                        string="modal.title_error"
                        transform={null}
                      >
                        <span
                          className={null}
                          role={null}
                        >
                          modal.title_error
                        </span>
                      </Translate>
                    </div>
                  </Dotdotdot>
                </Ellipsis>
              </div>
            </ForwardRef(Typography)>
          </Title>
          <Content
            content={
              <div
                onClick={[Function]}
              >
                <React.Fragment>
                  <Translate
                    acceptPlainTextWithPlaceholders={false}
                    className={null}
                    params={{}}
                    role={null}
                    string="Error message"
                    transform={null}
                  />
                </React.Fragment>
              </div>
            }
          >
            <div
              className="sg-jwwtvb-body"
              id="basicDialogDesc"
            >
              <div
                onClick={[Function]}
              >
                <Translate
                  acceptPlainTextWithPlaceholders={false}
                  className={null}
                  params={{}}
                  role={null}
                  string="Error message"
                  transform={null}
                >
                  <span
                    className={null}
                    role={null}
                  >
                    Error message
                  </span>
                </Translate>
              </div>
            </div>
          </Content>
        </div>
        <div
          className="sg-3766ab-actions"
        >
          <div
            className="sg-1orvbrr-innerActions"
          >
            <Buttons
              actions={[]}
            />
          </div>
        </div>
      </div>
    </FocusTrap>
  </BasicDialog>
</PipelineErrorDialog>
`;

exports[`<PipelineErrorDialog /> should show a custom message if a message is is provided 1`] = `
<PipelineErrorDialog
  actions={[]}
  message="Custom message"
  params={
    {
      "code": "123",
      "message": "Error message",
      "pipeline": "fakePipeline",
      "request": {},
    }
  }
>
  <BasicDialog
    actions={[]}
    title="modal.title_error"
  >
    <FocusTrap>
      <div
        aria-labelledby="basicDialogTitle basicDialogDesc"
        aria-modal={true}
        className="sg-1pcx6xq-container ui-material__base-dialog"
        data-test-id="basicDialog"
        role="alertdialog"
      >
        <div
          className="sg-1t4okzq-content"
        >
          <Title
            title="modal.title_error"
          >
            <ForwardRef(Typography)
              aria-level="2"
              className="sg-bawed5-title"
              component="div"
              id="basicDialogTitle"
              role="heading"
              variant="h3"
            >
              <div
                aria-level="2"
                className="engage__typography engage__typography_h3 sg-a3ut8q-Typography-root-Typography-h3-title"
                id="basicDialogTitle"
                role="heading"
              >
                <Ellipsis
                  className=""
                  rows={3}
                >
                  <Dotdotdot
                    clamp={3}
                    className=" common__ellipsis"
                    tagName="div"
                    truncationChar="…"
                    useNativeClamp={true}
                  >
                    <div
                      className=" common__ellipsis"
                    >
                      <Translate
                        acceptPlainTextWithPlaceholders={false}
                        className={null}
                        params={{}}
                        role={null}
                        string="modal.title_error"
                        transform={null}
                      >
                        <span
                          className={null}
                          role={null}
                        >
                          modal.title_error
                        </span>
                      </Translate>
                    </div>
                  </Dotdotdot>
                </Ellipsis>
              </div>
            </ForwardRef(Typography)>
          </Title>
          <Content
            content={
              <div
                onClick={[Function]}
              >
                <React.Fragment>
                  <Translate
                    acceptPlainTextWithPlaceholders={false}
                    className={null}
                    params={{}}
                    role={null}
                    string="Custom message"
                    transform={null}
                  />
                </React.Fragment>
              </div>
            }
          >
            <div
              className="sg-jwwtvb-body"
              id="basicDialogDesc"
            >
              <div
                onClick={[Function]}
              >
                <Translate
                  acceptPlainTextWithPlaceholders={false}
                  className={null}
                  params={{}}
                  role={null}
                  string="Custom message"
                  transform={null}
                >
                  <span
                    className={null}
                    role={null}
                  >
                    Custom message
                  </span>
                </Translate>
              </div>
            </div>
          </Content>
        </div>
        <div
          className="sg-3766ab-actions"
        >
          <div
            className="sg-1orvbrr-innerActions"
          >
            <Buttons
              actions={[]}
            />
          </div>
        </div>
      </div>
    </FocusTrap>
  </BasicDialog>
</PipelineErrorDialog>
`;
